tests/snapshots/run_wpt_conformance__trtx_lesser_float16_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "lesser.https.any.js",
    "lesser float16 0D scalar",
    "trtx",
    Failed {
        msg: Some(
            "lesser :: lesser float16 0D scalar: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputA: [-0.52294921875]; inputB: [0.81494140625]\n  expected output: [1]\n  actual output: [0]\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f16[];\n    inputB: f16[];\n  }\n\n  nodes {\n    [output] = lesser(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
