tests/snapshots/run_wpt_conformance__trtx_lesser_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "lesser.https.any.js",
    "lesser float16 1D constant tensors",
    "trtx",
    Failed {
        msg: Some(
            "lesser :: lesser float16 1D constant tensors: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputA: [-1.1474609375, -8.40625, -2.275390625, -0.5771484375, 8.171875, -0.9072265625, 5.2890625, -3.9140625, 9.828125, -8.9296875, -3.45703125, -7.33203125, 1.232421875, 4.3125, 1.271484375, 4.18359375, -6.7109375, 3.076171875, 1.0029296875, -9.078125, 8.90625, 4.234375, 2.1015625, -6.203125] (constant); inputB: [2.9453125, 3.73046875, 4.0234375, -4.71875, 6.7734375, -2.04296875, -6.52734375, 6.828125, -9.265625, 6.1171875, -2.001953125, 1.7802734375, 9.65625, -2.748046875, -3.43359375, -4.75, -6.09375, -0.43359375, -1.4072265625, -0.2374267578125, -9.109375, 6.8125, -6.76953125, -8.953125] (constant)\n  expected output: [1, 1, 1, 0, 0, 0, 0, 1, 0, 1 ...] (len=24)\n  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=24)\n  expected output full nd:\n[1, 1, 1, 0, 0, 0, 0, 1, 0, 1, ...] (len=24, shape=[24])\n  actual output full nd:\n[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=24, shape=[24])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  consts {\n    operand_0: f16[24] @bytes([151, 188, 52, 200, 141, 192, 158, 184, 22, 72, 66, 187, 74, 69, 212, 195, 234, 72, 119, 200, 234, 194, 85, 199, 238, 60, 80, 68, 22, 61, 47, 68, 182, 198, 39, 66, 3, 60, 138, 200, 116, 72, 60, 68, 52, 64, 52, 198]);\n    operand_1: f16[24] @bytes([228, 65, 118, 67, 6, 68, 184, 196, 198, 70, 22, 192, 135, 198, 212, 70, 162, 200, 30, 70, 1, 192, 31, 63, 212, 72, 127, 193, 222, 194, 192, 196, 24, 198, 240, 182, 161, 189, 153, 179, 142, 200, 208, 70, 197, 198, 122, 200]);\n  }\n\n  nodes {\n    [output] = lesser(operand_0, operand_1, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
